Create profile header section
Signed-off-by: Ino Gamalinda <ino@gamalinda.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="test_profile_image_desc">Profile Image</string>
+    <string name="test_profile_name">PROFILE NAME</string>
+    <string name="test_profile_subtitle">subtitle</string>
 </resources>
