--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="test_profile_name">PROFILE NAME</string>
     <string name="test_profile_subtitle">subtitle</string>
     <string name="test_profile_misc_title">misc title 12345</string>
+    <string name="collapsing_profile_behavior" translatable="false">com.gamalinda.android.poc.testing.collapsingtoolbar.behavior.CollapsingProfileBehavior</string>
 </resources>
